--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+# Datasource config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/inventario?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://arquitecturabd.mysql.database.azure.com/inventario?useSSL=false&useTimezone=true&serverTimezone=GMT-5
+spring.datasource.username=estudiante@arquitecturabd
+spring.datasource.password=estudiantepswd
+
+# jpa config
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+#flyway
+spring.flyway.enabled=false
+
